# aurea

./: Cargo.toml  README.md  build.rs  clippy.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
aurea-animation/: Cargo.toml
aurea-animation/src/: easing.rs  lib.rs
aurea-core/: Cargo.toml
aurea-core/src/: lib.rs
aurea-ffi/: Cargo.toml  build.rs
aurea-ffi/native/common/: input.h  platform_api.h  platform_dispatch.c  platform_ops.h  rust_callbacks.h  types.h
aurea-ffi/native/include/aurea/: platform_api.h
aurea-ffi/native/platform/: linux.c  macos.h  macos.m  windows.c
aurea-ffi/native/platform/android/: android.h  window.c  window.h
aurea-ffi/native/platform/ios/: ios.h  ios.m  utils.h  utils.m
aurea-ffi/native/platform/ios/elements/: button.m  combo_box.m  image_view.m
aurea-ffi/native/platform/linux/: elements.h  linux_ops.c  utils.h  window.c  window.h
aurea-ffi/native/platform/linux/elements/: canvas.c  combo_box.c  sidebar_list.c  slider.c
aurea-ffi/native/platform/macos/: elements.h  macos_ops.m  menu.m  swiftui_host.m  utils.h  window.h  window.m
aurea-ffi/native/platform/macos/elements/: canvas.m  progress_bar.m  text_editor.m
aurea-ffi/native/platform/windows/: elements.h  utils.c  utils.h  window.c  window.h  windows_ops.c
aurea-ffi/native/platform/windows/elements/: box.c  canvas.c  checkbox.c  image_view.cpp  progress_bar.c  split_view.c  tab_bar.c  text_common.c  text_editor.c  text_view.c
aurea-ffi/src/: declarations.rs  lib.rs
aurea-foundation/: Cargo.toml
aurea-foundation/src/: capability.rs  error.rs  events.rs  platform.rs  sync.rs
aurea-render/: Cargo.toml
aurea-render/src/: batch.rs  command.rs  display_list.rs  gpu.rs  interaction.rs  lib.rs  numeric.rs  renderer.rs  types.rs  viewport.rs  wgpu_backend.rs  zengpu.rs  zengpu_surface.rs
aurea-render/src/cpu/: blend.rs  context.rs  hit_test.rs  mod.rs  path.rs  rasterizer.rs  scanline.rs
aurea-render/src/gpu2d/: backend.rs  frame_plan.rs  mod.rs  resolve.rs  texture_cache.rs
aurea-render/src/text/: atlas.rs  directwrite_backend.rs  fontdue_backend.rs  mod.rs  platform.rs
aurea-render/src/wgpu_backend/: backend.rs  buffer.rs  mod.rs  shaders.rs
aurea-render/src/zengpu/: backend.rs  buffer.rs  mod.rs  pipelines.rs  shaders.rs  surface.rs  texture_cache.rs
aurea-render/src/zengpu_v2/: backend.rs  mod.rs  surface.rs
aurea-runtime/: Cargo.toml
aurea-runtime/src/: damage.rs  event_queue.rs  frame_queue.rs  lib.rs
c_src/: native_gui.c  native_gui.h
c_src/common/: input.h  platform_api.h  rust_callbacks.h  types.h
c_src/platform/: android.c  android.h  ios.m  linux.c  linux.h  macos.h  macos.m  windows.c  windows.h
c_src/platform/android/: android.c  android.h  window.c  window.h
c_src/platform/ios/: app_delegate.m  elements.h  ios.h  ios.m  main.m  rust_bridge.h  utils.m  view_controller.h  (+3 more)
crates/aurea/: Cargo.toml
crates/aurea-core/: Cargo.toml
crates/aurea-ffi/: Cargo.toml  build.rs
crates/aurea-render/: Cargo.toml
crates/aurea-render/src/: command.rs  display_list.rs  gpu.rs  interaction.rs  lib.rs  renderer.rs  types.rs
crates/aurea-render/src/cpu/: blend.rs  context.rs  mod.rs  rasterizer.rs  scanline.rs  tile.rs
crates/aurea-render/src/text/: atlas.rs  directwrite_backend.rs  fontdue_backend.rs  mod.rs  platform.rs
crates/aurea-runtime/: Cargo.toml
crates/aurea/examples/: canvas_blend.rs  canvas_demo.rs  canvas_gradient.rs  canvas_image.rs  canvas_showcase.rs  canvas_text.rs  cursor_lock.rs  fontkit.rs  ide_like.rs  input_smoke.rs  multi_window.rs  window.rs
crates/aurea/src/: android.rs  lib.rs  lifecycle.rs
crates/aurea/src/elements/: button.rs  checkbox.rs  combo_box.rs  container.rs  divider.rs  image_view.rs  label.rs  mod.rs  progress_bar.rs  sidebar_list.rs  slider.rs  spacer.rs  split_view.rs  swiftui_host.rs  tab_bar.rs  text_editor.rs  text_field.rs  traits.rs
crates/aurea/src/ffi/: callbacks.rs
crates/aurea/src/integration/: mod.rs  wgpu.rs
crates/aurea/src/registry/: custom.rs  elements.rs  menu.rs  window.rs
crates/aurea/src/render/: canvas.rs  interaction.rs  mod.rs  renderer.rs  surface.rs
crates/aurea/src/render/cpu/: blend.rs  cache.rs  context.rs  hit_test.rs  rasterizer.rs  scanline.rs
crates/aurea/src/render/text/: atlas.rs  mod.rs  platform.rs
crates/aurea/src/view/: scheduler.rs
crates/aurea/src/window/: events.rs  manager.rs  mod.rs
examples/: animate_bounce.rs  animate_fade.rs  animate_multi.rs  bench_static.rs  browser.rs  canvas_blend.rs  canvas_demo.rs  canvas_gradient.rs  canvas_image.rs  canvas_showcase.rs  canvas_text.rs  cursor_lock.rs  fontkit.rs  hybrid_ui.rs  ide_like.rs  input_smoke.rs  multi_window.rs  wgpu_canvas.rs  wgpu_window.rs  window.rs  zengpu_2d_displaylist.rs  zengpu_2d_rects.rs  zengpu_canvas.rs  zengpu_cube.rs  zengpu_cube_fg.rs  zengpu_demo.rs  zengpu_frame_graph.rs  zengpu_offscreen.rs  zengpu_shared_context.rs  zengpu_textured_quad.rs  zengpu_triangle.rs
native/common/: errors.h  platform.c  platform_api.h  platform_dispatch.c  platform_ops.h  rust_callbacks.h
native/platform/: android.c  ios.m  linux.c  linux.h  macos.h  macos.m  windows.c
src/: capability.rs  embed.rs  events.rs  ffi.rs  lib.rs  lifecycle.rs  logger.rs  main.rs  menu.rs  platform.rs  sync.rs  wgpu_integration.rs  window.rs
src/core/: error.rs  mod.rs
src/elements/: box.rs  button.rs  checkbox.rs  combo_box.rs  container.rs  divider.rs  image_view.rs  label.rs  mod.rs  progress_bar.rs  sidebar_list.rs  slider.rs  spacer.rs  split_view.rs  swiftui_host.rs  tab_bar.rs  text_editor.rs  text_field.rs  text_view.rs  traits.rs
src/ffi/: callbacks.rs  declarations.rs  logging.rs  mod.rs
src/integration/: wgpu.rs
src/registry/: custom.rs  elements.rs  menu.rs  mod.rs  window.rs
src/render/: canvas.rs  display_list.rs  interaction.rs  mod.rs  renderer.rs  surface.rs  types.rs  viewport.rs
src/runtime/: damage.rs  event_queue.rs  frame_queue.rs  mod.rs
src/view/: damage.rs  mod.rs  scheduler.rs
src/window/: events.rs  manager.rs  mod.rs
(+157 files in other folders)
