[package]
name = "aurea"
version = "0.0.2"
edition = "2024"
rust-version = "1.88"
description = "Native GUI toolkit with cross-platform windowing, native widgets, and framework-owned CPU rasterizer"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/SkuldNorniern/aurea"

[workspace]
resolver = "2"
members = ["aurea-foundation", "aurea-ffi", "aurea-render", "aurea-runtime", "aurea-animation"]
exclude = ["ZenGPU"]

[lib]
name = "aurea"
crate-type = ["rlib", "cdylib"]

[dependencies]
aurea-foundation = { path = "aurea-foundation", version = "0.0.1" }
aurea-ffi = { path = "aurea-ffi", version = "0.0.1" }
aurea-render = { path = "aurea-render", version = "0.0.1" }
aurea-runtime = { path = "aurea-runtime", version = "0.0.1" }
aurea-animation = { path = "aurea-animation", version = "0.0.1" }
libc = "0.2"
log = "0.4.29"
jni = { version = "0.21", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
default = []
wgpu = ["dep:wgpu"]
# GPU 2D backend via ZenGPU (Vulkan). Opt-in.
# Forwards to aurea-render (which owns the ZenGpuRenderer) and pulls in
# zengpu-hal so the root crate can build WindowHandles for the window-level API.
zengpu = ["aurea-render/zengpu", "dep:zengpu-hal"]

[dependencies.wgpu]
version = "29.0.1"
optional = true

[dependencies.raw-window-handle]
version = "0.6"

# zengpu-hal — optional, for the window-level GPU surface API (feature `zengpu`).
# Same path as the dev-dependency below, so Cargo unifies them to one crate.
[dependencies.zengpu-hal]
path = "ZenGPU/zengpu-hal"
optional = true

# ZenGPU — local path deps (will become git deps once published).
[dev-dependencies.zengpu-hal]
path = "ZenGPU/zengpu-hal"

[dev-dependencies.zengpu-vulkan]
path = "ZenGPU/zengpu-vulkan"

[dev-dependencies.inline-spirv]
version = "0.2"
features = ["glsl"]

# DisplayList → ZenGPU example needs the GPU backend compiled in.
[[example]]
name = "zengpu_2d_displaylist"
required-features = ["zengpu"]

[[example]]
name = "zengpu_canvas"
required-features = ["zengpu"]

[[example]]
name = "zengpu_cube"
