[package]
name = "aurea-render"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
description = "CPU/GPU rendering backends, display list, and text pipeline for Aurea"
license = "Apache-2.0"
repository = "https://github.com/SkuldNorniern/aurea"

[features]
default = []
# GPU 2D backend via ZenGPU (Vulkan). Opt-in; pulls in ash/Vulkan.
zengpu = ["dep:zengpu-hal", "dep:zengpu-vulkan"]

[dependencies]
aurea-foundation = { path = "../aurea-foundation", version = "0.0.1" }
fontdb = "0.16"
fontdue = "0.9"

# ZenGPU — optional, enabled by the `zengpu` feature.
zengpu-hal = { path = "../ZenGPU/zengpu-hal", optional = true }
zengpu-vulkan = { path = "../ZenGPU/zengpu-vulkan", optional = true }

# Windows: hinted ClearType glyph rasterization via DirectWrite.
[target.'cfg(windows)'.dependencies]
dwrote = "0.11"
winapi = { version = "0.3", features = ["dwrite", "dcommon", "winnt", "windef", "winerror"] }
